# himalaya

./: .gitignore  .gitmodules  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  LICENSE-APACHE  LICENSE-MIT  MIGRATION.md  README-DE.md  README-ES.md  README-FR.md  README-PT.md  README-RU.md  README-ZH.md  README.md  ROADMAP.md  SECURITY.md  build.rs  config.sample.toml  cross-systems.nix  default.nix  deny.toml  flake.nix  install.sh  package.nix  rust-toolchain.nix  rust-toolchain.toml  rustfmt.toml  shell.nix  systems.nix  test.eml  test.mml  test.txt
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: do-not-open-issues-on-github.md
.github/workflows/: audit.yml  build-on-demand.yml  custom-release.yml  deployment.yaml  deployment.yml  fastmail-imap-tests.yml  fastmail-jmap-tests.yml  fastmail-smtp-tests.yml  fastmail-tests.yml  musl.yml  nix-build.yaml  nix.yml  pre-release.yml  pre-releases.yml  release-on-demand.yml  release.yaml  release.yml  releases.yml  stalwart-imap-tests.yml  stalwart-jmap-tests.yml  stalwart-smtp-tests.yml  stalwart-tests.yml  test.yml  tests.yaml  tests.yml  zip.yml
assets/: himalaya-gui.desktop  himalaya-watch@.service  himalaya.desktop
calendar-manager/: Cargo.toml  README.md
calendar-manager/src/: main.rs
calendar-synchronizer/: Cargo.toml  README.md
calendar-synchronizer/src/: main.rs
cli/: Cargo.toml
cli/src/: lib.rs  main.rs
contact-manager/: Cargo.toml  README.md
contact-manager/src/: main.rs
contact-synchronizer/: Cargo.toml  README.md
contact-synchronizer/src/: main.rs
email-manager/: Cargo.toml  README.md
email-manager/assets/: himalaya.desktop
email-manager/src/: main.rs
email-manager/vim/: README.md
email-synchronizer/: Cargo.toml  README.md
email-synchronizer/src/: main.rs
gui/: Cargo.toml
gui/iui/: Cargo.toml
gui/iui/src/: callback_helpers.rs  compile_tests.rs  error.rs  ffi_tools.rs  lib.rs  menus.rs  str_tools.rs  ui.rs  util_types.rs
gui/iui/src/controls/: area.rs  button.rs  create_macro.rs  entry.rs  label.rs  layout.rs  mod.rs  progressbar.rs  window.rs
gui/iui/src/draw/: brush.rs  context.rs  mod.rs  path.rs  strokeparams.rs  transform.rs
gui/src/: lib.rs  mail_list.rs  main.rs
gui/ui-sys/: Cargo.toml  build.rs  wrapper.h
imap-codec/: .cargo_vcs_info.json  Cargo.toml  Cargo.toml.orig  README.md
imap-codec/examples/: client.rs  fragmentizer.rs  server.rs
imap-codec/src/: auth.rs  body.rs  codec.rs  command.rs  core.rs  datetime.rs  envelope.rs  extensions.rs  fetch.rs  flag.rs  fragmentizer.rs  lib.rs  mailbox.rs  response.rs  search.rs  sequence.rs  status.rs  testing.rs
imap-codec/tests/: trace.rs
lib/: Cargo.toml
lib/src/: lib.rs  process.rs
lib/src/account/: account_config.rs  deserialized_account_config.rs  deserialized_config.rs  hooks.rs  mod.rs
lib/src/backend/: backend.rs  id_mapper.rs  mod.rs
lib/src/backend/imap/: error.rs  imap_backend.rs  imap_envelope.rs  imap_envelopes.rs  imap_flag.rs  imap_flags.rs  msg_sort_criterion.rs
lib/src/backend/maildir/: error.rs  maildir_backend.rs  maildir_envelope.rs  maildir_envelopes.rs  maildir_flag.rs  maildir_flags.rs
lib/src/backend/notmuch/: error.rs  notmuch_backend.rs  notmuch_envelope.rs  notmuch_envelopes.rs
lib/src/mbox/: mbox.rs  mboxes.rs  mod.rs
lib/src/msg/: addr.rs  envelope.rs  envelopes.rs  error.rs  flag.rs  flags.rs  mod.rs  msg.rs  msg_utils.rs  parts.rs  tpl.rs
lib/tests/: test_imap_backend.rs  test_maildir_backend.rs  test_notmuch_backend.rs
lib/tests/emails/: alice-to-patrick-encrypted.eml
lib/tests/keys/: alice.pub.asc  patrick.asc
man/: himalaya.1  himalaya.1.md
src/: .rustc_info.json  account.rs  app.rs  backend.rs  cli.rs  config.rs  ctx.rs  editor.rs  email.rs  email_client.rs  imap.rs  input.rs  io.rs  lib.rs  mailbox.rs  main.rs  mbox.rs  msg.rs  output.rs  printer.rs  sasl.rs  smtp.rs  stream.rs  table.rs  table2.rs  tls.rs  tracing.rs  wizard.rs
src/account/: args.rs  check.rs  cli.rs  config.rs  configure.rs  context.rs  handlers.rs  list.rs  mod.rs  wizard.rs
src/attachments/: cli.rs  command.rs  download.rs  list.rs  mod.rs  table.rs
src/backend/: config.rs  mod.rs  wizard.rs
src/backends/: backend.rs  id_mapper.rs
src/cache/: args.rs  id_mapper.rs  mod.rs
src/cli/: config.rs  flag.rs  imap.rs  mbox.rs  mod.rs  msg.rs  output.rs  shell_completion.rs  tpl.rs
src/comp/: cli.rs  mod.rs
src/compl/: arg.rs  args.rs  compl_arg.rs  compl_handler.rs  handler.rs  handlers.rs  mod.rs
src/complete/: cli.rs
src/completion/: args.rs  cli.rs  command.rs  handler.rs
src/config/: account.rs  account_args.rs  account_config.rs  account_entity.rs  account_handlers.rs  arg.rs  args.rs  cli.rs  config.rs  config_args.rs  config_entity.rs  deserializable_account_config.rs  deserializable_config.rs  deserialized_account_config.rs  deserialized_config.rs  entity.rs  entity_account.rs  entity_config.rs  format.rs  mod.rs  model.rs  prelude.rs  tui.rs  wizard.rs
src/domain/: imap.rs  mod.rs
src/email/: mod.rs
src/envelopes/: cli.rs  command.rs  list.rs  mod.rs  table.rs
src/flag/: arg.rs  cli.rs  flag.rs  mod.rs  model.rs
src/flags/: add.rs  arg.rs  cli.rs  command.rs  delete.rs  mod.rs  set.rs
src/folder/: args.rs  config.rs  handlers.rs  mod.rs
src/gmail/: attachments.rs  cli.rs  client.rs  drafts.rs  history.rs  labels.rs  messages.rs  mod.rs  profile.rs  threads.rs
src/himalaya_tui/: cli.rs  mod.rs
src/imap/: account.rs  cli.rs  client.rs  command.rs  fetch.rs  handlers.rs  id.rs  mod.rs  model.rs  raw.rs  session.rs  stream.rs  utils.rs  wizard.rs
src/jmap/: account.rs  cli.rs  client.rs  command.rs  error.rs  mod.rs  query.rs  session.rs
src/m2dir/: arg.rs  cli.rs  client.rs  (+4 more)
task-manager/: Cargo.toml  README.md
task-synchronizer/: Cargo.toml  README.md
tests/: fastmail-imap.rs  fastmail-jmap.rs  fastmail-smtp.rs  imap_test.rs  keybindings.rs  maildir_test.rs  msg.rs  stalwart-imap.rs  stalwart-jmap.rs  stalwart-smtp.rs  stalwart.sh  test_imap_backend.rs  test_maildir_backend.rs  test_notmuch_backend.rs
vim/: README.md
(+782 files in other folders)
