[package]
name = "himalaya"
description = "CLI to manage emails"
version = "1.2.0"
authors = ["Clément DOUIN <pimalaya.org@posteo.net>"]
edition = "2021"
license = "MIT"
categories = ["command-line-utilities", "email"]
keywords = ["cli", "email", "imap", "maildir", "smtp"]
homepage = "https://pimalaya.org"
documentation = "https://github.com/pimalaya/himalaya"
repository = "https://github.com/pimalaya/himalaya"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = ["imap", "smtp", "maildir", "jmap", "rustls-ring"]

imap = ["dep:io-imap", "dep:mail-parser", "dep:rfc2047-decoder", "io-email/imap", "io-imap/client"]
jmap = ["dep:base64", "dep:io-jmap", "dep:mail-parser", "dep:serde_json", "io-email/jmap", "io-jmap/client"]
smtp = ["dep:io-smtp", "dep:mail-parser", "pimalaya-stream/smtp", "io-email/smtp"]
maildir = ["dep:convert_case", "dep:io-maildir", "dep:mail-parser", "dep:mime_guess", "io-email/maildir", "io-maildir/client"]

native-tls = ["pimalaya-stream/native-tls", "io-discovery/native-tls"]
rustls-aws = ["pimalaya-stream/rustls-aws", "io-discovery/rustls-aws"]
rustls-ring = ["pimalaya-stream/rustls-ring", "io-discovery/rustls-ring"]

vendored = ["pimalaya-stream/vendored"]

[build-dependencies]
pimalaya-cli = { version = "0.0.1", default-features = false, features = ["build"] }

[dependencies]
anyhow = "1"
base64 = { version = "0.22", optional = true }
chrono = { version = "0.4", default-features = false }
clap = { version = "4.4", features = ["derive", "env", "wrap_help"] }
comfy-table = "7"
convert_case = { version = "0.11", optional = true }
dirs = "6"
gethostname = "1"
io-discovery = { version = "0.0.1", default-features = false, features = ["pacc", "autoconfig", "client"] }
io-email = { version = "0.0.1", default-features = false, features = ["serde", "client"] }
io-imap = { version = "0.0.1", default-features = false, optional = true }
io-jmap = { version = "0.0.1", default-features = false, optional = true }
io-maildir = { version = "0.0.1", default-features = false, features = ["serde"], optional = true }
io-process = { version = "0.0.2", default-features = false }
io-smtp = { version = "0.0.1", default-features = false, optional = true }
log = "0.4"
mail-builder = "0.3"
mail-parser = { version = "0.11", features = ["serde"], optional = true }
mime_guess = { version = "2", optional = true }
open = "5"
pimalaya-cli = { version = "0.0.1", default-features = false, features = ["terminal", "table", "prompt", "wizard", "imap", "smtp"] }
pimalaya-config = { version = "0.0.1", default-features = false, features = ["toml", "secret"] }
pimalaya-stream = { version = "0.0.1", default-features = false, features = ["std", "http"] }
rfc2047-decoder = { version = "1", optional = true }
secrecy = "0.10"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", optional = true }
shellexpand = "3.1"
toml = "0.8"
url = { version = "2.2", features = ["serde"] }

[target.'cfg(windows)'.dependencies]
uds_windows = "1"

[dev-dependencies]
assert_cmd = "2"
io-jmap = { version = "0.0.1", default-features = false }
serde = "1"
serde_json = "1"
tempfile = "3"

[patch.crates-io]
domain = { git = "https://github.com/soywod/domain", branch = "new-srv" }
io-discovery.path = "../io-discovery"
io-email.path = "../io-email"
io-http.git = "https://github.com/pimalaya/io-http"
io-imap.path = "../io-imap"
io-jmap.path = "../io-jmap"
io-maildir.path = "../io-maildir"
io-smtp.path = "../io-smtp"
pimalaya-cli.path = "../cli"
pimalaya-config.path = "../config"
pimalaya-stream.path = "../stream"
